--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -59,6 +59,11 @@ nav {
       background-color: transparent;
     }
 
+    a {
+      padding: 12px 24px;
+      margin: 20px;
+    }
+
     .user {
       display: flex;
       align-items: center;
@@ -101,12 +106,11 @@ nav {
       }
     }
 
-    a {
-      padding: 12px 24px;
-      margin: 20px;
-    }
-
     .register {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 40%;
       background-color: #fece51;
     }
 
